# LoRa-Shell

./: .gitignore  main.py  shell.nix
FlipperBoard/: FlipperBoard.kicad_pcb  FlipperBoard.kicad_prl  FlipperBoard.kicad_pro  FlipperBoard.kicad_sch  fp-info-cache  smug-proot.xcf
FlipperBoard/Custom.pretty/: smug-proot.kicad_mod
FlipperBoard/Export/Gerber/: FlipperBoard-B_Cu.gbr  FlipperBoard-B_Mask.gbr  FlipperBoard-B_Paste.gbr  FlipperBoard-B_Silkscreen.gbr  FlipperBoard-Edge_Cuts.gbr  FlipperBoard-F_Cu.gbr  FlipperBoard-F_Mask.gbr  FlipperBoard-F_Paste.gbr  FlipperBoard-F_Silkscreen.gbr  FlipperBoard-NPTH.drl  FlipperBoard-PTH.drl  FlipperBoard-job.gbrjob
PiPico/: CMakeLists.txt  build.sh  run.sh  shell.nix
PiPico/src/: main.c  main.c.old
